kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: seshaveni1/fakeguard-frontend:latest

        ports:
        - containerPort: 5173

        resources:
          requests:
            cpu: "200m"

          limits:
            cpu: "500m"
